force-app/main/default/objects/copado__Selenium_Locator__c/fields/copado__External_ID__c.field-meta.xml
<CustomField>
    <fullName>copado__External_ID__c</fullName>
    <description>MD5 of Page + Locator</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>