force-app/main/default/objects/copado__Selenium_Locator__c/fields/copado__Locator__c.field-meta.xml
<CustomField>
    <fullName>copado__Locator__c</fullName>
    <inlineHelpText>Selenium locator that identifies the element on the page.</inlineHelpText>
    <label>Locator</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>