force-app/main/default/objects/copado__Selenium_Locator__c/fields/copado__Page__c.field-meta.xml
<CustomField>
    <fullName>copado__Page__c</fullName>
    <inlineHelpText>Used to give context for the locator. It can be any text.
Copado Recorder will automatically set the page title when recording.</inlineHelpText>
    <label>Page</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>