force-app/main/default/objects/copado__Selenium_Locator__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Page__c</columns>
    <columns>copado__Locator__c</columns>
    <columns>copado__Locator_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>